backend/infra/reservation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation
  template:
    metadata:
      labels:
        app: reservation
    spec:
      containers:
        - name: reservation
          image: rex100/reservation
---

apiVersion: v1
kind: Service
metadata: 
  name: reservation-srv
spec:
  selector:
    app: reservation
  ports:
    - name: reservation
      port: 3000
      protocol: TCP
      targetPort: 3000
